# radman

./: .gitignore  Package.swift  README.md  pyproject.toml
.github/workflows/: release.yml
Sources/HorizonRFMac/: HorizonRFMacApp.swift
Sources/HorizonRFMac/Models/: AppModels.swift  RadioSupport.swift
Sources/HorizonRFMac/Services/: AppStore.swift  CHIRPCSVService.swift  CSVCodec.swift  ChannelClipboardService.swift  ChannelPlanService.swift  RT950ProBackupService.swift  RT950ProCPSService.swift  RT950ProCloneCodec.swift  RT950ProComparisonService.swift  RT950ProUSBService.swift  RadManValidationService.swift  SerialPortService.swift
Sources/HorizonRFMac/Support/: AppDialogs.swift
Sources/HorizonRFMac/Views/: ChannelsView.swift  ContactsView.swift  ContentView.swift  DashboardView.swift  DeviceView.swift  HeardView.swift  RadiosView.swift  ToolsView.swift
Sources/HorizonRFMac/Views/Shared/: RT950ProComparisonSheet.swift  RadManUI.swift
scripts/: build-app-icon.sh  build-icns.py  build-macos-app.sh  generate-radman-icon.py  make-dmg.sh
src/horizon_radio/: __init__.py  __main__.py  chirp.py  cli.py  db.py
tests/: test_cli.py  test_macos_pivot.py
tests/HorizonRFMacTests/: CHIRPCSVServiceTests.swift  ChannelPlanServiceTests.swift  RT950ProBackupServiceTests.swift  RT950ProCPSServiceTests.swift  RT950ProCloneCodecTests.swift  RT950ProComparisonServiceTests.swift  RT950ProUSBServiceTests.swift  RadManValidationServiceTests.swift  RadioSupportTests.swift
