[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "horizon-rf"
version = "0.1.0"
description = "Cross-platform CLI for radio contacts, heard frequencies, CHIRP CSV export, and optional CHIRP image workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["radio", "ham", "chirp", "cli", "logging"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Ham Radio",
  "Topic :: Utilities",
]

[project.scripts]
horizon-rf = "horizon_radio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
